--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
     "@icon-park/react": "^1.3.5",
     "@types/lyric-parser": "^1.0.2",
     "ahooks": "^3.1.8",
@@ -15,6 +16,7 @@
     "daisyui": "^1.24.3",
     "howler": "^2.2.3",
     "lyric-parser": "^1.0.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.0",
