--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.34.0",
     "react-router-dom": "^6.0.2",
+    "rimraf": "^3.0.2",
     "theme-change": "^2.0.2"
   },
   "devDependencies": {
